# REDTOPS-Shell

./: .gitignore  CMakeLists.txt  README.md
assets/screens/: boot.txt
assets/themes/: default_theme.json
configs/: default.json
src/: main.cpp
src/commands/: clear.cpp  clear.hpp  help.cpp  help.hpp  ping.cpp  ping.hpp
src/commands/cpp/: PortScanCommand.cpp  TraceCommand.cpp  clear.cpp  exit.cpp  fs_commands.cpp  help.cpp  netinfo.cpp  netscan_command.cpp  ping.cpp  sniff.cpp  sysinfo.cpp
src/commands/headers/: clear.hpp  exit.hpp  fs_commands.hpp  help.hpp  netinfo.hpp  netscan.hpp  ping.hpp  portscan.hpp  sniff.hpp  sysinfo.hpp  trace.hpp
src/core/: CommandParser.cpp  CommandRegistry.cpp  Shell.cpp  Shell.h  TerminalRenderer.cpp  TerminalRenderer.h
src/core/Depreciated/: TerminalRenderer.cpp  TerminalRenderer.h  TerminalRenderer.hpp
src/core/cpp/: CommandParser.cpp  CommandRegistry.cpp  ConfigLoader.cpp  Shell.cpp  TerminalRenderer.cpp
src/core/header/: Command.h  CommandParser.hpp  CommandRegistry.h  CommandRegistry.hpp  ConfigLoader.hpp  Exceptions.hpp  Shell.h  Shell.hpp  TerminalRenderer.hpp
src/extensions/: README.md
src/modules/: README.md
src/ui/: README.md
tests/: CMakeLists.txt  test_main.cpp
